# AtomicDrive

./: .gitignore  Cargo.toml
.github/workflows/: benchmark.yml
crates/chunk/: Cargo.toml
crates/chunk/src/: chunk.rs
crates/db/: Cargo.toml
crates/db/benches/: db.rs
crates/db/src/: lib.rs  prefix.rs  tests.rs
crates/db/src/backend/: memory.rs  mod.rs  rocks.rs
crates/file/: Cargo.toml
crates/file/src/: file_event.rs  file_path.rs  file_stats.rs  file_system.rs  file_type.rs  lib.rs
crates/file/src/local/: config.rs  discoverer.rs  error.rs  helper.rs  mod.rs  tracker.rs
crates/file/src/local/walker/: mod.rs
crates/file/src/tracker/: discovery.rs  mod.rs
crates/file_local/: Cargo.toml
crates/file_local/src/: lib.rs
crates/file_local/src/db/: mod.rs  tests.rs
crates/file_local/src/new_new_tracker/: discovery.rs  entity.rs  mod.rs
crates/file_local/src/new_tracker/: mod.rs
crates/file_local/src/tracker/: error.rs  mod.rs  tests.rs
crates/file_local/src/walker/: error.rs  mod.rs
crates/file_local/src/watcher/: error.rs  mod.rs
crates/gossip-simulator/: Cargo.toml
crates/sync/: Cargo.toml
crates/sync/examples/: syncing.rs
crates/sync/src/: chunk.rs  drive.rs  lib.rs  main.rs  mvvreg.rs  vindex.rs  vindexreg.rs  vreg.rs
crates/tracker/: Cargo.toml
crates/tracker/src/: entity.rs  lib.rs  marker.rs
crates/trie/: Cargo.toml
crates/trie/benches/: trie.rs
crates/trie/src/: lib.rs  store.rs  vindex.rs
crates/trie/src/backend/: common.rs  db.rs  memory.rs  mod.rs  rocks.rs
crates/trie/src/tests/: mod.rs  tools.rs
crates/trie/src/trie/: mod.rs  store.rs
crates/trie/src/trie/tests/: tools.rs
crates/utils/: Cargo.toml
crates/utils/macros/: Cargo.toml
crates/utils/macros/src/: lib.rs
crates/utils/src/: bytes_stringify.rs  digest.rs  event.rs  lib.rs  path.rs  serialize.rs  tree_stringify.rs  visual_tree.rs
crates/vindex/: Cargo.toml
crates/vindex/src/: chunk.rs  lib.rs  vindex.rs  vindexreg.rs
crates/vindex/src/tree/: mod.rs
crates/vindex/src/trie/: mod.rs
test_dir/: 321
