[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = { version = "0.21", features = ["lz4"], default-features = false }
thiserror = "1.0"
parking_lot = "0.12.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
test-results = "0.1.2"
bumpalo = { version = "3", features = ["allocator_api"] }

[[bench]]
name = "db"
harness = false