[package]
name = "file_local"
version = "0.1.0"
edition = "2021"

[dependencies]
file = { path = "../file" }
utils = { path = "../utils" }
notify = { version = "5.1.0", features = ["serde"] }
rocksdb = { version = "0.20", features = ["lz4"], default-features = false }
parking_lot = "0.12.1"
dunce = "1.0.4"

[dev-dependencies]
test-results = "0.1.2"
