[package]
name = "file_local"
version = "0.1.0"
edition = "2021"

[dependencies]
file = { path = "../file" }
utils = { path = "../utils" }
trie = { path = "../trie" }
db = { path = "../db" }
notify = { version = "5.1.0", features = ["serde"] }
rocksdb = { version = "0.21", features = ["lz4"], default-features = false }
parking_lot = "0.12.1"
dunce = "1.0.4"
memmap2 = "0.6.2"

[dev-dependencies]
test-results = "0.1.2"
