[package]
name = "sync"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
file = { path = "../file" }
trie = { path = "../trie" }
chunk = { path = "../chunk" }
db = { path = "../db" }

[profile.release]
debug = 1

[rust]
debuginfo-level = 1

[dev-dependencies]
eframe = { version = "0.21.0", default-features = false, features = ["default_fonts", "glow"] }
tracing-subscriber = "0.3"
