[package]
name = "trie"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }
rocksdb = { version = "0.21", features = ["lz4"], default-features = false }
thiserror = "1.0"
sha2 = "0.10.6"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
crdts = "7.3.0"
indoc = "2"

[[bench]]
name = "trie"
harness = false
