[package]
name = "trie"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
db = { path = "../db" }
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
crdts = "7.3.0"
indoc = "2"

[[bench]]
name = "trie"
harness = false
