[package]
name = "trie"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
db = { path = "../db" }
chunk = { path = "../chunk" }
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }
crdts = "7.3.0"
libp2p = { version = "0.51.2", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
codspeed-criterion-compat = { version = "2.2.0" }
indoc = "2"

[features]
codspeed = []

[[bench]]
name = "trie"
harness = false
