[package]
name = "vindex"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
trie = { path = "../trie" }
chunk = { path = "../chunk" }
serde = { version = "1.0", features = ["derive"] }
crdts = "7.3.0"
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }
thiserror = "1.0"
libp2p = { version = "0.51.2", features = ["serde"] }

[dev-dependencies]
indoc = "2"